<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mark1_launch</name>
  <version>0.0.0</version>
  <description>Launch files for Mark1 robot navigation and control</description>
  <maintainer email="mohankalyan01@gmail.com">mveeraghanta</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Existing dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <!-- Nav2 dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <exec_depend>topic_tools</exec_depend>


  <!-- lidar dependencies - slam -->
  <exec_depend>slam_toolbox</exec_depend>
<!-- script dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- Transform dependencies -->
  <exec_depend>tf2_ros</exec_depend>
  
  <!-- RTABMap for visual odometry -->
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  
  <!-- Your robot packages -->
  <exec_depend>mark1_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>